fix: UI flex gap

--- a/styles.css
+++ b/styles.css
@@ -487,7 +487,7 @@ width: 29%;
     font-size: 2.5rem;
   }
   .list-item{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: 0px 8px;
     border-radius: 12px;
   }
@@ -508,6 +508,9 @@ width: 29%;
   }
   .project-card img{
     height: 80%;
+  }
+  .section5{
+   gap: 30px;
   }
   .s5{
     font-size: 2rem;
